--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DISCORD_WEBHOOK=
-RTL_FREQ=157.950
-RTL_DEVICE_ID=
-RTL_GAIN=40.2
+DISCORD_WEBHOOK=""
+RTL_FREQ="157.50"
+RTL_DEVICE_ID=""
+RTL_GAIN="40.2"
